# astro-library

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-release.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  main.py  seed.py
backend/app/api/: astro_objects.py  files.py  health.py  projects.py  sessions.py
backend/app/database/: db.py  session.py
backend/app/models/: __init__.py  app_meta.py  astro_object.py  file.py  project.py  session.py
backend/app/schemas/: __init__.py  astro_object.py  file.py  project.py  session.py
backend/app/services/: astro_objects.py  files.py  projects.py  sessions.py
backend/migrations/: README  env.py
backend/migrations/versions/: 20260708_0001_initial.py
backend/tests/: test_health.py
docker/: Dockerfile  docker-compose.yml
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/app/layout/: AppShell.tsx
frontend/src/app/providers/: AppProviders.tsx
frontend/src/app/routes/: AppRouter.tsx
scripts/: check_commit_msg.py  release.py
