[project]
name = "backend"
version = "0.1.0"
description = "Backend worker/api project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "astropy>=8.0.0",
    "astroquery>=0.4.11",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "watchfiles>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
